# fantastic-palm-tree

./: .gitignore  OMakefile  UseLATEX.cmake  f-p-t.txt  files.txt  get-return.sh  go.sh  gocaml.sh  index.html  params.json  perfect-day.song  put_files.sh  read.ml  rock-and-roll.song  rude.sh  script.txt  song.css  upload-cmd.sh  upload-i.sh  upload.sh
css/: song-print.css  song.css
oboot/: OMakefile.default  OMakeroot.default  bootstrap  bootstrap.osh  fail.ascii.root  success.ascii.root
songs/: OMakefile  atelier.book  back-in-the-ussr.song  bliss.song  cendrillon.song  come-as-you-are.song  crash-sum41.song  creep.song  derniers-feux.song  hasta-siempre.song  heroes.song  karma-police-radiohead.song  laisse-beton.song  let-it-be.song  little-wing.song  lonely-day.song  new-years-day.song  perfect-day.song  purple-rain.song  redemption-song.song  rock-and-roll.song  seven-nation-army.song  simsons.book  song.ist  sorry-day.song  starlight.song  starman.song  sunday-bloody-sunday.song  time.song  you-shook-me-all-night-long.song  (+2 more)
src/: CMakeLists.txt  OMakefile  book.ml  book.mli  chord.h  chord.ml  chord.mli  datamodel.h  datamodel.ml  fantastic palm tree.sln  grille.cpp  grille.h  helpers.ml  image.mp  info.json  json11.cpp  json11.hpp  main.cpp  main.ml  make_all.ml  make_all.mli  make_chord_svg.ml  png_digest.pristine.txt  read.ml  read_util.cpp  read_util.h  read_util.hc  read_util.ml  read_util.mli  song-to-html  song-to-html.opt  song.cpp  song.h  song.ml  song.mli  tablature.cpp  tablature.h  write_cmakefile.cpp  write_html_index.ml  write_index.ml  (+13 more)
(+46 files in other folders)
